# tschuss

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meson.build  meson_options.txt  style.css  tschuss.conf
src/: buttons.c  buttons.h  conf.c  conf.h  debug.txt  main  main.c  style.css  tschuss.conf
